# claims-audit-agent

./: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
agent_aisdk/: .env.example  eslint.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
agent_aisdk/artifacts/: aisdk_holdout_openrouter_off_raw.json  aisdk_holdout_openrouter_on_raw.json  mcp-sparql-tools.json  results_holdout_openrouter_off.json  results_holdout_openrouter_off.md  results_holdout_openrouter_on.json  results_holdout_openrouter_on.md
agent_aisdk/eval/: run_eval.py  smoke_eval.py
agent_aisdk/scripts/: mcp_probe.ts
agent_aisdk/src/: agent.ts  cli.ts  context.ts  data.ts  mcp.ts  mock.ts  models.ts  paths.ts  prompting.ts  provider.ts  rules.ts  tools.ts
agent_aisdk/test/: agent.test.ts  mcp.test.ts  models.test.ts  tools.test.ts
agent_graph/: __init__.py  graph.py
agent_sdk/: __init__.py  agent.py
claims_audit/: __init__.py  engine.py  metrics.py  models.py  prompting.py  rules.py  tools.py
data/: claims.json  generate.py  ground_truth.json  holdout.json  manifest.json
docs/: STATUS.md
evals/: __init__.py  baseline.py  gate.py  harness.py  reporting.py  run_eval.py
providers/: __init__.py  chat.py
rules/: audit_rules.yaml
scripts/: make_demo_gif.py
tests/: test_agents_offline.py  test_data.py  test_engine.py  test_eval_gate.py  test_metrics.py  test_models.py  test_openrouter_e2e.py  test_providers.py  test_rules.py  test_tools.py
web/: README.md  index.html
